-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.10.0 Beta1
-
None
-
-
30d06c304 (dev), a8a4d2225 (6.10)
Steps to reproduce:
- Launch examples/graphs/3d/widgetgraphgallery
- In the bar graph, switch to "Model Proxy Data"
- Note warnings
Mesh building failed: Vertex buffer empty ..... Mesh building failed: Vertex buffer empty Mesh building failed: Vertex buffer empty Mesh building failed: Vertex buffer empty Mesh building failed: Vertex buffer empty Mesh building failed: Vertex buffer empty QRhi 0x760c20002b30 going down with 4 unreleased resources that own native graphics objects. This is not nice. RenderBuffer resource 0x16712630 () TextureRenderTarget resource 0x14a1d370 (QQuick3DDirectionalLight shadow map) Texture resource 0x760bf8004440 ()
For Gerrit Dashboard: QTBUG-137979 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
655796,5 | Don't try to load an empty vertex buffer | dev | qt/qtquick3d | Status: MERGED | +2 | 0 |
656191,2 | Don't try to load an empty vertex buffer | 6.10 | qt/qtquick3d | Status: MERGED | +2 | 0 |