Don't try to load an empty vertex buffer

Previously, it tried to load a mesh even if the mesh data vertex buffer
was empty. This caused it to display warning about
mesh building failure. This patch add check for an empty vertex buffer.
This suppresses the warning.

Amends: edaef10f41074b0616c3ec42d379cf4bd9cc9278

Fixes: QTBUG-137979
Change-Id: I2ec4f39cf04802d16181e3cb485715653b9cf54d
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
(cherry picked from commit 30d06c304fdaf6326b026dc70fe9776bc505e64d)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>